Refactoring using a styled component

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="ru">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
@@ -9,12 +9,18 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <title>Test Html Coder</title>
+    <meta content="on" http-equiv="x-dns-prefetch-control">
+    <link href="%PUBLIC_URL%/favicon/apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180">
+    <link href="%PUBLIC_URL%/favicon/favicon-32x32.png" rel="icon" sizes="32x32" type="image/png">
+    <link href="%PUBLIC_URL%/favicon/favicon-16x16.png" rel="icon" sizes="16x16" type="image/png">
+    <link href="%PUBLIC_URL%/favicon/safari-pinned-tab.svg" rel="mask-icon" color="#5bbad5">
+    <link href="%PUBLIC_URL%/favicon/favicon.ico" rel="shortcut icon">
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link href="%PUBLIC_URL%/favicon/site.webmanifest" rel="manifest">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -24,7 +30,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
